[gd_scene load_steps=7 format=3 uid="uid://mvitlumb0lko"]

[ext_resource type="Script" path="res://scenes/items_table/settings_pane/group_pattern.gd" id="1_wtitt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s702g"]
bg_color = Color(0.737255, 0.572549, 0.192157, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hn8lp"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.368627, 0.133333, 0.133333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ar2ln"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.623529, 0.254902, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fugho"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.880582, 0.483425, 0.466988, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_brwrx"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.439216, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GroupPattern" type="HBoxContainer"]
script = ExtResource("1_wtitt")

[node name="Warn" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "Будет удалено при закрытии!"
theme_override_styles/panel = SubResource("StyleBoxFlat_s702g")

[node name="ItemSelector" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="SpinBoxChar" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
min_value = -1.0
value = -1.0
alignment = 1

[node name="SpinBoxQuality" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
min_value = -1.0
value = -1.0
alignment = 1

[node name="ButtonDelete" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "Зажми CTRL+SHIFT!"
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_hn8lp")
theme_override_styles/hover = SubResource("StyleBoxFlat_ar2ln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fugho")
theme_override_styles/disabled = SubResource("StyleBoxFlat_brwrx")
disabled = true
text = "Удалить"
